# phenotype-pm-core

./: .env.example  Cargo.toml  README.md  trace-gate.toml
.github/: dependabot.yml
.github/workflows/: trace-gate.yml
crates/trace-gate/: Cargo.toml
crates/trace-gate/src/: coverage.rs  main.rs  manifest.rs  push.rs
crates/trace-gate/tests/: integration_test.rs
crates/trace-gate/tests/fixtures/: manifest_all.toml  manifest_partial.toml
crates/trace-gate/tests/fixtures/src/: auth.rs
crates/traceability-core/: Cargo.toml
crates/traceability-core/src/: artifact.rs  contract.rs  execution_graph.rs  governance.rs  ids.rs  impact.rs  intent_graph.rs  lib.rs  lifecycle.rs  matrix.rs  progress.rs  requirement.rs  tracelink.rs
crates/traceability-decorators/: Cargo.toml
crates/traceability-decorators/src/: lib.rs  main.rs  patterns.rs  scanner.rs
docs/adr/: ADR-0001-superset-merge.md  ADR-trace-gate-adoption.md
docs/audit/: AUDIT.md
