[workspace]
resolver = "3"
members = [
    "crates/traceability-core",
    "crates/traceability-decorators",
    "crates/trace-gate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/phenotype-pm-core"
description = "phenotype-pm-core — shared PM/traceability spine for AgilePlus and Tracera"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
regex = "1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
