[package]
name = "trace-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CI gate binary: scans source annotations, checks FR coverage, exits 1 on missing coverage"

[[bin]]
name = "trace-gate"
path = "src/main.rs"

[dependencies]
traceability-core = { path = "../traceability-core" }
traceability-decorators = { path = "../traceability-decorators" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
is-terminal = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
